--- a/build.gradle
+++ b/build.gradle
@@ -34,14 +34,18 @@ dependencies {
 	implementation 'org.springdoc:springdoc-openapi-ui:1.8.0'
 	// https://mvnrepository.com/artifact/io.swagger.core.v3/swagger-annotations
 	implementation 'io.swagger.core.v3:swagger-annotations:2.2.28'
-	// https://mvnrepository.com/artifact/com.auth0/java-jwt
 	// https://mvnrepository.com/artifact/org.jooq/jooq
 	implementation 'org.jooq:jooq:3.20.1'
 	// https://mvnrepository.com/artifact/org.jooq/jooq-codegen
 	implementation 'org.jooq:jooq-codegen:3.20.1'
 	// https://mvnrepository.com/artifact/org.jooq/jooq-meta
 	implementation 'org.jooq:jooq-meta:3.20.1'
-	implementation 'com.auth0:java-jwt:4.5.0'
+	// https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt-api
+	implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
+	// https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt-jackson
+	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'
+	// https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt-impl
+	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	runtimeOnly 'org.postgresql:postgresql'
