--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,3 +4,22 @@ spring:
 
   profiles:
     active: dev
+
+  jpa:
+    show-sql: true
+    hibernate:
+      ddl-auto: validate
+    properties:
+      hibernate:
+        format_sql: true
+
+  jwt:
+    secret-key: xg5EQtqpgSHdAv/HJKHBLiPY9qKsnzpyO2knO+YJxPY=oupyVIuBSzapi42BgeLikDHepEcKptqiyd6WTcQ0rkk=
+    duration-time: 300000
+
+  flyway:
+    user: postgres
+    password: 123123
+    enabled: true
+    baseline-on-migrate: true
+    baseline-version: 0
