--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,6 +4,7 @@ spring:
 
   profiles:
     active: dev
+    include: custom
 
   jpa:
     show-sql: true
@@ -13,18 +14,22 @@ spring:
       hibernate:
         format_sql: true
 
-  jwt:
-    secret-key: xg5EQtqpgSHdAv/HJKHBLiPY9qKsnzpyO2knO+YJxPY=oupyVIuBSzapi42BgeLikDHepEcKptqiyd6WTcQ0rkk=
-    access-duration-time: 900000
-    refresh-duration-time: 604800000
-    issuer: travel-app
-
   flyway:
     user: postgres
     password: 123123
     enabled: true
     baseline-on-migrate: true
     baseline-version: 0
+
+  mail:
+    host: smtp.gmail.com
+    port: 587
+    username: nam2023.11.07@gmail.com
+    password: Khong@123145667899
+    properties:
+      mail.smtp.auth: true
+      mail.smtp.starttls.enable: true
+    protocol: smtp
 
 springdoc:
   api-docs:
@@ -54,12 +59,3 @@ mybatis:
     cache-enabled: false
     lazy-loading-enabled: true
     aggressive-lazy-loading: false
-
-app:
-  backend:
-    api:
-      path:
-        refresh-token: /auth/refresh-token
-  frontend:
-    route:
-      signup-confirm: /signup/confirm
