--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -26,7 +26,7 @@ spring:
     host: smtp.gmail.com
     port: 587
     username: nam2023.11.07@gmail.com
-    password: dneaswjmlqxjlohf
+    password: vhtugesokjfiqmjk
     protocol: smtp
     properties:
       debug: true
