--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -7,7 +7,7 @@ spring:
 app:
   domain:
     backend: http://localhost:8080
-    frontend: http://localhost:8080${server.servlet.context-path}/auth
+    frontend: http://localhost:3000
   openapi:
     server:
       url: ${app.domain.backend}${server.servlet.context-path}
