--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,6 @@ repositories {
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
@@ -41,6 +40,8 @@ dependencies {
 	implementation("org.mybatis:mybatis:3.5.19")
 	// https://mvnrepository.com/artifact/org.mybatis/mybatis-spring
 	implementation("org.mybatis:mybatis-spring:3.0.4")
+	// https://mvnrepository.com/artifact/com.baomidou/mybatis-plus-boot-starter
+	implementation("com.baomidou:mybatis-plus-boot-starter:3.5.11")
 	// https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt-api
 	implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
 	// https://mvnrepository.com/artifact/org.mapstruct/mapstruct
