--- a/build.gradle
+++ b/build.gradle
@@ -34,14 +34,10 @@ dependencies {
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.5'
 	// https://mvnrepository.com/artifact/io.swagger.core.v3/swagger-annotations
 	implementation 'io.swagger.core.v3:swagger-annotations:2.2.28'
-	// https://mvnrepository.com/artifact/org.mybatis.spring.boot/mybatis-spring-boot-starter
-	implementation("org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.4")
-	// https://mvnrepository.com/artifact/org.mybatis/mybatis
-	implementation("org.mybatis:mybatis:3.5.19")
-	// https://mvnrepository.com/artifact/org.mybatis/mybatis-spring
-	implementation("org.mybatis:mybatis-spring:3.0.4")
-	// https://mvnrepository.com/artifact/com.baomidou/mybatis-plus-boot-starter
-	implementation("com.baomidou:mybatis-plus-boot-starter:3.5.11")
+	// https://mvnrepository.com/artifact/com.baomidou/mybatis-plus-spring-boot3-starter
+	implementation("com.baomidou:mybatis-plus-spring-boot3-starter:3.5.11")
+	// https://mvnrepository.com/artifact/com.baomidou/mybatis-plus-jsqlparser
+	implementation("com.baomidou:mybatis-plus-jsqlparser:3.5.11")
 	// https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt-api
 	implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
 	// https://mvnrepository.com/artifact/org.mapstruct/mapstruct
