--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -72,7 +72,7 @@ mybatis-plus:
     lazy-loading-enabled: true
     aggressive-lazy-loading: false
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
-  mapper-locations: classpath:mybatis/mapper/**/*.xml
+  mapper-locations: classpath:/mapper/**/*.xml
   type-aliases-package: app.travel.model
   global-config:
     db-config:
