--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -60,9 +60,7 @@ server:
 logging:
   level:
     org.springframework.security: DEBUG
-    com.baomidou.mybatisplus.core: DEBUG
-    com.baomidou.mybatisplus.extension: DEBUG
-    org.mybatis: DEBUG
+    org.apache.ibatis: DEBUG
     app.travel: DEBUG
 
 mybatis-plus:
@@ -72,7 +70,7 @@ mybatis-plus:
     lazy-loading-enabled: true
     aggressive-lazy-loading: false
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
-  mapper-locations: classpath:/mapper/**/*.xml
+  mapper-locations: classpath:mapper/**/*.xml
   type-aliases-package: app.travel.model
   global-config:
     db-config:
