--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-webflux
+	implementation("org.springframework.boot:spring-boot-starter-webflux:3.4.4")
 	// https://mvnrepository.com/artifact/com.cloudinary/cloudinary-core
 	implementation("com.cloudinary:cloudinary-core:2.2.0")
 	// https://mvnrepository.com/artifact/com.cloudinary/cloudinary-http5
