--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:postgresql://db.gwgojvifpltvocdnphmy.supabase.co:5432/postgres
+    url: jdbc:postgresql://localhost:5432/travel_db
     username: postgres
     password: 123123
 
