--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	// https://mvnrepository.com/artifact/org.redisson/redisson
+	implementation("org.redisson:redisson:3.45.1")
 	// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-webflux
 	implementation("org.springframework.boot:spring-boot-starter-webflux:3.4.4")
 	// https://mvnrepository.com/artifact/com.cloudinary/cloudinary-core
@@ -69,7 +71,13 @@ dependencies {
 	annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
-	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+	// https://mvnrepository.com/artifact/io.projectreactor/reactor-test
+	testImplementation("io.projectreactor:reactor-test:3.7.5")
+	testImplementation platform("org.junit:junit-bom:5.11.0")
+	testImplementation 'org.junit.jupiter:junit-jupiter'
+	testImplementation 'org.junit.platform:junit-platform-launcher:1.11.4'
+	testImplementation 'org.junit.platform:junit-platform-commons:1.11.4'
+	testImplementation 'org.junit.platform:junit-platform-engine:1.11.4'
 }
 
 tasks.named('test') {
