--- a/build.gradle
+++ b/build.gradle
@@ -58,6 +58,8 @@ dependencies {
 	implementation("org.springframework.boot:spring-boot-starter-mail:3.4.4")
 	// https://mvnrepository.com/artifact/org.bouncycastle/bcprov-jdk18on
 	implementation("org.bouncycastle:bcprov-jdk18on:1.80")
+	// https://mvnrepository.com/artifact/com.fasterxml.jackson.datatype/jackson-datatype-jsr310
+	implementation("com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.19.0")
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	runtimeOnly 'org.postgresql:postgresql'
